--- a/styles/output.css
+++ b/styles/output.css
@@ -573,15 +573,9 @@ video {
   }
 }
 
-@media (min-width: 1260px) {
+@media (min-width: 1250px) {
   .container {
-    max-width: 1260px;
-  }
-}
-
-@media (min-width: 1920px) {
-  .container {
-    max-width: 1920px;
+    max-width: 1250px;
   }
 }
 
@@ -700,6 +694,22 @@ video {
   margin-bottom: 1rem;
 }
 
+.mb-\[\] {
+  margin-bottom: ;
+}
+
+.mb-\[3\] {
+  margin-bottom: 3;
+}
+
+.mb-\[32\] {
+  margin-bottom: 32;
+}
+
+.mb-\[32px\] {
+  margin-bottom: 32px;
+}
+
 .block {
   display: block;
 }
@@ -732,44 +742,16 @@ video {
   height: auto;
 }
 
-.h-\[534px\] {
-  height: 534px;
-}
-
-.h-2 {
-  height: 0.5rem;
-}
-
-.h-\[\] {
-  height: ;
-}
-
-.h-\[40\] {
-  height: 40;
+.h-\[235px\] {
+  height: 235px;
 }
 
 .h-\[40px\] {
   height: 40px;
 }
 
-.h-\[10px\] {
-  height: 10px;
-}
-
-.h-\[1-0px\] {
-  height: 1-0px;
-}
-
-.h-\[100px\] {
-  height: 100px;
-}
-
-.h-\[4\] {
-  height: 4;
-}
-
-.max-h-\[600px\] {
-  max-height: 600px;
+.h-2 {
+  height: 0.5rem;
 }
 
 .w-full {
@@ -778,22 +760,6 @@ video {
 
 .w-\[40px\] {
   width: 40px;
-}
-
-.w-\[0px\] {
-  width: 0px;
-}
-
-.w-\[10px\] {
-  width: 10px;
-}
-
-.w-\[100px\] {
-  width: 100px;
-}
-
-.w-\[\] {
-  width: ;
 }
 
 .max-w-full {
@@ -828,16 +794,12 @@ video {
   max-width: 740px;
 }
 
-.max-w-\[600px\] {
-  max-width: 600px;
-}
-
 .max-w-\[520px\] {
   max-width: 520px;
 }
 
-.max-w-\[1230px\] {
-  max-width: 1230px;
+.max-w-\[300px\] {
+  max-width: 300px;
 }
 
 .max-w-\[250px\] {
@@ -846,58 +808,6 @@ video {
 
 .max-w-\[235px\] {
   max-width: 235px;
-}
-
-.max-w-\[230px\] {
-  max-width: 230px;
-}
-
-.max-w-\[2230px\] {
-  max-width: 2230px;
-}
-
-.max-w-\[120px\] {
-  max-width: 120px;
-}
-
-.max-w-\[10px\] {
-  max-width: 10px;
-}
-
-.max-w-\[100px\] {
-  max-width: 100px;
-}
-
-.max-w-\[1900px\] {
-  max-width: 1900px;
-}
-
-.max-w-\[00px\] {
-  max-width: 00px;
-}
-
-.max-w-\[900px\] {
-  max-width: 900px;
-}
-
-.max-w-\[1200px\] {
-  max-width: 1200px;
-}
-
-.max-w-\[1300px\] {
-  max-width: 1300px;
-}
-
-.max-w-\[700px\] {
-  max-width: 700px;
-}
-
-.max-w-\[300px\] {
-  max-width: 300px;
-}
-
-.grow {
-  flex-grow: 1;
 }
 
 .cursor-pointer {
@@ -1018,36 +928,16 @@ video {
   padding: 0px;
 }
 
-.p-\[30px\] {
-  padding: 30px;
+.p-3 {
+  padding: 0.75rem;
 }
 
 .p-\[10px\] {
   padding: 10px;
 }
 
-.p-3 {
-  padding: 0.75rem;
-}
-
-.p-\[3\] {
-  padding: 3;
-}
-
-.p-\[\] {
-  padding: ;
-}
-
-.p-\[1\] {
-  padding: 1;
-}
-
-.p-2 {
-  padding: 0.5rem;
-}
-
-.p-4 {
-  padding: 1rem;
+.p-\[40px\] {
+  padding: 40px;
 }
 
 .py-6 {
@@ -1095,9 +985,34 @@ video {
   padding-right: 48px;
 }
 
-.px-\[30px\] {
-  padding-left: 30px;
-  padding-right: 30px;
+.py-80 {
+  padding-top: 20rem;
+  padding-bottom: 20rem;
+}
+
+.py-\[80px\] {
+  padding-top: 80px;
+  padding-bottom: 80px;
+}
+
+.py-\[\] {
+  padding-top: ;
+  padding-bottom: ;
+}
+
+.py-\[40\] {
+  padding-top: 40;
+  padding-bottom: 40;
+}
+
+.py-\[40\[x\]\] {
+  padding-top: 40[x];
+  padding-bottom: 40[x];
+}
+
+.py-\[40\[\]\] {
+  padding-top: 40[];
+  padding-bottom: 40[];
 }
 
 .pb-\[20px\] {
@@ -1124,6 +1039,10 @@ video {
   padding-bottom: 124px;
 }
 
+.pl-4 {
+  padding-left: 1rem;
+}
+
 .pt-\[48px\] {
   padding-top: 48px;
 }
@@ -1132,40 +1051,12 @@ video {
   padding-bottom: 64px;
 }
 
-.pl-\[\] {
-  padding-left: ;
+.pb-40 {
+  padding-bottom: 10rem;
 }
 
-.pl-\[3\] {
-  padding-left: 3;
-}
-
-.pl-\[35\] {
-  padding-left: 35;
-}
-
-.pl-\[35px\] {
-  padding-left: 35px;
-}
-
-.pl-\[5px\] {
-  padding-left: 5px;
-}
-
-.pl-\[45px\] {
-  padding-left: 45px;
-}
-
-.pl-\[4px\] {
-  padding-left: 4px;
-}
-
-.pl-\[40px\] {
-  padding-left: 40px;
-}
-
-.pl-4 {
-  padding-left: 1rem;
+.pt-\[40px\] {
+  padding-top: 40px;
 }
 
 .text-center {
@@ -1242,6 +1133,22 @@ video {
 
 .leading-\[32px\] {
   line-height: 32px;
+}
+
+.leading-\[\] {
+  line-height: ;
+}
+
+.leading-\[5\] {
+  line-height: 5;
+}
+
+.leading-\[50\] {
+  line-height: 50;
+}
+
+.leading-\[50px\] {
+  line-height: 50px;
 }
 
 .text-darkergray {
@@ -1434,15 +1341,23 @@ h1, h2, h3, h4, h5, h6 {
     padding-top: 30px;
     padding-bottom: 30px;
   }
+
+  .mobile\:text-center {
+    text-align: center;
+  }
 }
 
 @media (min-width: 768px) {
-  .tablet\:mr-\[20px\] {
-    margin-right: 20px;
+  .tablet\:h-\[534px\] {
+    height: 534px;
   }
 
   .tablet\:w-11\/12 {
     width: 91.666667%;
+  }
+
+  .tablet\:max-w-\[520px\] {
+    max-width: 520px;
   }
 
   .tablet\:grid-cols-2 {
@@ -1495,15 +1410,9 @@ h1, h2, h3, h4, h5, h6 {
     }
   }
 
-  @media (min-width: 1260px) {
+  @media (min-width: 1250px) {
     .laptop\:container {
-      max-width: 1260px;
-    }
-  }
-
-  @media (min-width: 1920px) {
-    .laptop\:container {
-      max-width: 1920px;
+      max-width: 1250px;
     }
   }
 
@@ -1544,12 +1453,24 @@ h1, h2, h3, h4, h5, h6 {
     margin-left: 1rem;
   }
 
+  .laptop\:mb-0 {
+    margin-bottom: 0px;
+  }
+
   .laptop\:mr-\[80px\] {
     margin-right: 80px;
   }
 
-  .laptop\:mb-0 {
-    margin-bottom: 0px;
+  .laptop\:ml-\[80px\] {
+    margin-left: 80px;
+  }
+
+  .laptop\:mb-1 {
+    margin-bottom: 0.25rem;
+  }
+
+  .laptop\:mb-10 {
+    margin-bottom: 2.5rem;
   }
 
   .laptop\:flex {
@@ -1636,6 +1557,14 @@ h1, h2, h3, h4, h5, h6 {
     padding-left: 40px;
   }
 
+  .laptop\:pt-\[133px\] {
+    padding-top: 133px;
+  }
+
+  .laptop\:text-left {
+    text-align: left;
+  }
+
   .laptop\:text-\[40px\] {
     font-size: 40px;
   }
@@ -1649,7 +1578,7 @@ h1, h2, h3, h4, h5, h6 {
   }
 }
 
-@media (min-width: 1260px) {
+@media (min-width: 1250px) {
   .desktop\:pb-\[40px\] {
     padding-bottom: 40px;
   }
